java/versioned_docs/version-1.13/api/class-filechooser.mdx
---
id: class-filechooser
title: "FileChooser"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[FileChooser] objects are dispatched by the page in the [Page.onFileChooser(handler)](./api/class-page.mdx#page-event-file-chooser) event.

```java
FileChooser fileChooser = page.waitForFileChooser(() -> page.click("upload"));
fileChooser.setFiles(Paths.get("myfile.pdf"));
```


- [FileChooser.element()](./api/class-filechooser.mdx#file-chooser-element)
- [FileChooser.isMultiple()](./api/class-filechooser.mdx#file-chooser-is-multiple)
- [FileChooser.page()](./api/class-filechooser.mdx#file-chooser-page)
- [FileChooser.setFiles(files[, options])](./api/class-filechooser.mdx#file-chooser-set-files)

## FileChooser.element() {#file-chooser-element}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="file-chooser-element-return"/> &#60;[ElementHandle]&#62;<a href="#file-chooser-element-return" class="list-anchor">#</a>

Returns input element associated with this file chooser.

## FileChooser.isMultiple() {#file-chooser-is-multiple}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="file-chooser-is-multiple-return"/> &#60;[boolean]&#62;<a href="#file-chooser-is-multiple-return" class="list-anchor">#</a>

Returns whether this file chooser accepts multiple files.

## FileChooser.page() {#file-chooser-page}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="file-chooser-page-return"/> &#60;[Page]&#62;<a href="#file-chooser-page-return" class="list-anchor">#</a>

Returns page this file chooser belongs to.

## FileChooser.setFiles(files[, options]) {#file-chooser-set-files}
- `files`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="file-chooser-set-files-param-files"/> &#60;[Path]|[List]<[Path]>|`FilePayload`|[List]<`FilePayload`>&#62;<a href="#file-chooser-set-files-param-files" class="list-anchor">#</a>
  - `setName` &#60;[String]&#62; File name
  - `setMimeType` &#60;[String]&#62; File type
  - `setBuffer` &#60;[byte&#91;&#93;]&#62; File content
- `options` &#60;`FileChooser.SetFilesOptions`&#62;
  - `setNoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="file-chooser-set-files-option-no-wait-after"/> &#60;[boolean]&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#file-chooser-set-files-option-no-wait-after" class="list-anchor">#</a>
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="file-chooser-set-files-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#file-chooser-set-files-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="file-chooser-set-files-return"/> &#60;[void]&#62;<a href="#file-chooser-set-files-return" class="list-anchor">#</a>

Sets the value of the file input this chooser is associated with. If some of the `filePaths` are relative paths, then they are resolved relative to the the current working directory. For empty array, clears the selected files.

[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"